# interview-collections

./: README.md
goebpf/: Makefile  go.mod  go.sum  readme.md
goebpf/cebpf/docker/: doc.go  docker.bpf.c  dockertc.bpf.c  mydocker_x86_bpfel.go  mydockertc_x86_bpfel.go  tc_loader.go  xdp_loader.go
goebpf/cebpf/sys/: doc.go  loader.go  sys.bpf.c  sys_x86_bpfel.go
goebpf/cebpf/tc/: doc.go  loader.go  tc_write.bpf.c  tc_write_bpfeb.go  tc_write_bpfel.go
goebpf/cebpf/xdp/: doc.go  (+4 more)
goebpf/test/: build.sh  test.go  test.sql  testapp.go
hangqing/: Cargo.toml
hangqing/src/: main.rs
hangqing/src/akshare/: common_data.rs  control_rate.rs  day_k.rs  day_k_finder.rs  good_will.rs  helper.rs  mod.rs  north_founds.rs  share_concepts.rs  share_holder.rs  stock_cache.rs
hangqing/src/httphelper/: getter.rs  mod.rs
k8sapi-pro/: application.yaml  go.mod  go.sum  gvr.yaml  main.go  node.yaml
kubectl-ai/: build.sh  go.mod  go.sum  main.go
kubectl-ai/demo/: Sparkdemo.go
myhook/: build.bat  dockerfile  go.mod  main.go
myhook/lib/: config.go  convert.go  pods.go  schema.go
myhook/yamls/: myhook.yaml  test-dp.yaml  test-po.yaml  webhook.yaml
mykubelet/: go.mod  go.sum  ngx.yaml  readme.md
mykubelet/cmd/: main.go  registerNode.go
myoperator/: app.yaml  controller.go  go.mod  go.sum  main.go  reg-test.go
myoperator/resources/: crd-test.yaml  crd.yaml  ingress.yaml
mypodtrace/: main.go  pod.yaml
myproxy/: proxy.go
myscheduler/: main.go  test.go
myscheduler/lib/: test-scheduling.go
myscheduler/resources/: scheduling-deploy.yaml  test-scheduling.yaml
(+102 files in other folders)
